atualização para rodar no Overleaf

--- a/tese_template.tex
+++ b/tese_template.tex
@@ -1,3 +1,16 @@
+\documentclass[12pt,oneside,hidelinks,a4paper,final]{book}
+	% Font size (10pt, 11pt, 12pt)
+	% Paper size and format (a4paper, letterpaper, etc.)
+	% Draft mode (draft) -
+	% Multiple columns (onecolumn, twocolumn)
+	% Formula-specific options
+		%fleqn -  left alignment of formulas
+		%leqno -  labels formulas on the left hand side instead of right
+	% Landscape print mode (landscape)
+	% Single and double sided documents (oneside, twoside)
+	% Titlepage behavior (notitlepage, titlepage)
+	% Chapter opening page (openright, openany) - Faz com que os capítulos comecem somente nas páginas da direita ou na próxima página disponível.
+	
 \input{settings}
 
 \begin{document} %Início do documento
